--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,8 @@
-@article{xFinder,
-      title={xFinder: Robust and Pinpoint Answer Extraction for Large Language Models}, 
-      author={Qingchen Yu and Zifan Zheng and Shichao Song and Zhiyu Li and Feiyu Xiong and Bo Tang and Ding Chen},
-      journal={arXiv preprint arXiv:2405.11874},
-      year={2024},
+@inproceedings{
+    xFinder,
+    title={xFinder: Large Language Models as Automated Evaluators for Reliable Evaluation},
+    author={Qingchen Yu and Zifan Zheng and Shichao Song and Zhiyu li and Feiyu Xiong and Bo Tang and Ding Chen},
+    booktitle={The Thirteenth International Conference on Learning Representations},
+    year={2025},
+    url={https://openreview.net/forum?id=7UqQJUKaLM}
 }
